@@ -468,7 +468,7 @@ extern "C"
 /* 
  * 
  */
-#define PTHREAD_MUTEX_INITIALIZER { 1, 1, 0, NULL }
+#define PTHREAD_MUTEX_INITIALIZER { 1, 1, 0, {NULL} }
 
 
 /*
