@@ -1,3 +1,9 @@
+1999-02-22  Ross Johnson  <rpj@ise.canberra.edu.au>
+
+	* self2.c: Bring up to date.
+
+	* self3.c: Ditto.
+
 1999-02-21  Ben Elliston  <bje@cygnus.com>
 
 	* README: Update.
